[sway] second attempt to ditch gnome
remove endless dconf settings.
Add some boilerplate from https://nixos.wiki/wiki/Sway.
It's supposed to fix GTK theming, and also (hopefully) the annoying
BT keyboard lag. Right now I'm not experiencing it.
Will try to remove the DBUS stuff and try again

--- a/linux/sway/config
+++ b/linux/sway/config
@@ -247,7 +247,10 @@ bindsym Shift+Print  exec grim -t jpeg -g "$(slurp)" ~/Pictures/Screenshots/$(da
 # Unfuck launching GNOME apps (takes 20 seconds otherwise)
 exec systemctl --user import-environment
 # Unfuck GNOME keyring
-exec dbus-update-activation-environment --systemd DISPLAY
+# exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY
+
+exec dbus-sway-environment
+exec configure-gtk
 
 # Startup commands
 exec albert
