--- a/linux/sway/config
+++ b/linux/sway/config
@@ -247,11 +247,7 @@ bindsym Shift+Print  exec grim -t jpeg -g "$(slurp)" ~/Pictures/Screenshots/$(da
 
 # Unfuck launching GNOME apps (takes 20 seconds otherwise)
 exec systemctl --user import-environment
-# Unfuck GNOME keyring
-# exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY
-
-exec dbus-sway-environment
-exec configure-gtk
+exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
 
 # Startup commands
 exec mako
