Use exact matcher for LG ultrafine monitor
Currently there's a bug where the monitor is driven in 4k instead of 5k.
Setting 1.5x scale temporarily fixes the problem.
TODO: test with GNOME if this is resolved in some magic way.

--- a/linux/sway/config
+++ b/linux/sway/config
@@ -58,12 +58,11 @@ set $laptop eDP-1
 output $laptop {
   scale 1.25
 }
-set $retina DP-3
-output $retina {
-  # TODO: figure out why 2.0 looks way too big
+
+output "Goldstar Company Ltd LG UltraFine 806NTJJ3B908" {
+  mode 5120x2880
   scale 1.5
 }
-
 
 bindswitch --reload --locked lid:on output $laptop disable
 bindswitch --reload --locked lid:off output $laptop enable
