--- a/linux/sway/config
+++ b/linux/sway/config
@@ -76,6 +76,10 @@ input * {
     natural_scroll enabled
 }
 
+input 1:1:AT_Translated_Set_2_keyboard {
+    xkb_options ctrl:nocaps,altwin:swap_lalt_lwin
+}
+
 ### Idle configuration
 #
 exec swayidle -w \
