[vdirsyncer] fix vCard extension

--- a/vdirsyncer/config
+++ b/vdirsyncer/config
@@ -27,7 +27,7 @@ metadata = ["displayname"]
 
 [storage contacts]
 type = "filesystem"
-fileext = ".vcs"
+fileext = ".vcf"
 path = "~/.contacts"
 
 [storage fastmail_contacts]
