[sway] temporary hack: dpms only turn off laptop screen
If dpms shuts off external monitor, it doesn't wake up from sleep.
Need to unplug/replug the screen which is not great.

--- a/linux/sway/config
+++ b/linux/sway/config
@@ -84,7 +84,7 @@ input 1:1:AT_Translated_Set_2_keyboard {
 #
 exec swayidle -w \
          timeout 300 'swaylock -f -c 000000' \
-         timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
+         timeout 600 'swaymsg "output eDP-1 dpms off"' resume 'swaymsg "output * dpms on"' \
          before-sleep 'swaylock -f -c 000000'
 
 # Screen lock
