Bind sway to graphical-session.target
This is needed in order for wlsunset to properly start.

--- a/linux/sway/config
+++ b/linux/sway/config
@@ -255,6 +255,8 @@ bindsym Shift+Print  exec grim -t jpeg -g "$(slurp)" ~/Pictures/Screenshots/$(da
 
 # Unfuck launching GNOME apps (takes 20 seconds otherwise)
 exec systemctl --user import-environment
+exec systemctl --user start sway-session.target
+# TODO: not sure if this is needed anymore, getting off GNOME
 exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
 
 # Startup commands
