--- a/linux/sway/config
+++ b/linux/sway/config
@@ -214,9 +214,9 @@ bindsym $mod+backslash splith
 bindsym $mod+minus splitv
 
 # Switch the current container between different layout styles
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+d layout toggle split
+bindsym $mod+Shift+s layout stacking
+bindsym $mod+Shift+w layout tabbed
+bindsym $mod+Shift+d layout toggle split
 
 # Make the current focus fullscreen
 bindsym $mod+f fullscreen
