[sway][makoctl] cmd+n for invoke again. half broken
The thing is, we want to invoke because this switches tabs in browser to
the tab that produced the notification. It would be ideal if Sway also
switched the workspace and make the invoking app active.

--- a/linux/sway/config
+++ b/linux/sway/config
@@ -146,7 +146,7 @@ bindsym $mod+Space exec $menu
 # Reload the configuration file
 bindsym $mod+Shift+c reload
 # Open the last notification
-bindsym $mod+n exec makoctl dismiss
+bindsym $mod+n exec makoctl invoke
 # Exit sway (logs you out of your Wayland session)
 bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
 # Moving around:
