[i3status] add cpu freq to the bar

--- a/linux/sway/i3status-rs/config.toml
+++ b/linux/sway/i3status-rs/config.toml
@@ -22,7 +22,7 @@ cmd = "swaymsg scratchpad show"
 
 [[block]]
 block = "cpu"
-format = "$barchart"
+format = "$barchart $frequency"
 
 [[block]]
 block = "custom"
