[i3status-rs] remove cpu freq
after updating to 0.3 this seems unreliable

--- a/linux/sway/i3status-rs/config.toml
+++ b/linux/sway/i3status-rs/config.toml
@@ -18,7 +18,7 @@ cmd = "swaymsg scratchpad show"
 
 [[block]]
 block = "cpu"
-format = "$barchart $max_frequency"
+format = "$barchart"
 
 [[block]]
 block = "custom"
