--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.plist diff=plist
-age/* binary filter=age diff=age
-secrets/* binary filter=age diff=age
+age/* binary diff=age filter=age 
+secrets/* binary diff=age filter=age 
