--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.plist diff=plist
-age/* diff=age filter=age 
-secrets/* diff=age filter=age 
+age/* diff=age filter=age eol=lf
+secrets/* diff=age filter=age eol=lf
