--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
+* text=auto
 *.plist diff=plist
-age/* diff=age filter=age eol=lf
-secrets/* diff=age filter=age eol=lf
+secrets/* diff=age filter=age
