display battery percentage when empty
to whoever decided it was a great idea to hide percentage,
it was not a great idea

--- a/linux/sway/i3status-rs/config.toml
+++ b/linux/sway/i3status-rs/config.toml
@@ -54,6 +54,7 @@ cmd = "kitty --title floating_term nmtui connect"
 [[block]]
 block = "battery"
 interval = 10
+empty_format = " $icon $percentage "
 
 [[block]]
 block = "time"
