[i3status-rs] show cpu freq and boost on click

--- a/linux/sway/i3status-rs/config.toml
+++ b/linux/sway/i3status-rs/config.toml
@@ -18,7 +18,8 @@ cmd = "swaymsg scratchpad show"
 
 [[block]]
 block = "cpu"
-format = "$icon $utilization $barchart"
+format = "$barchart"
+format_alt = " $frequency{ $boost|}"
 
 [[block]]
 block = "custom"
