s/ulauncher/rofi-wayland
way faster and switches between open windows too

--- a/linux/sway/config
+++ b/linux/sway/config
@@ -56,7 +56,7 @@ set $up k
 set $right l
 set $term rio 
 set $browser firefox
-set $menu ulauncher
+set $menu rofi -show combi
 
 ### Output configuration
 #
