--- a/linux/sway/config
+++ b/linux/sway/config
@@ -102,6 +102,10 @@ input * {
     natural_scroll enabled
 }
 
+input 6127:24801:TrackPoint_Keyboard_II {
+    xkb_options ctrl:nocaps,altwin:swap_lalt_lwin
+}
+
 input 1:1:AT_Translated_Set_2_keyboard {
     xkb_options ctrl:nocaps,altwin:swap_lalt_lwin
 }
